Fixed footer spacings

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -34,6 +34,6 @@
 }
 
 .selected-movie .session-info p {
-    font-size: 18px;
-    
+    font-size: 24px;
+    padding-bottom: 7px;
 }
